# variant-partial-eq

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  rust-build.yml  rustfmt.yml
src/: lib.rs
tests/ui/fail/: const-generics.rs  const-generics.stderr  fail-on-enum.rs  fail-on-enum.stderr  lifetime-bound.rs  lifetime-bound.stderr  multiple-attributes.rs  multiple-attributes.stderr  non-lifetime-generic.rs  non-lifetime-generic.stderr  partial-eq-is-not-enough.rs  partial-eq-is-not-enough.stderr  type-bound.rs  type-bound.stderr  unit-struct.rs  unit-struct.stderr  unnamed-struct-fields.rs  unnamed-struct-fields.stderr
tests/ui/pass/: generated-lifetime-in-use.rs  no-generics.rs  option-thunk.rs  thunk.rs  trivial-struct.rs  type-parameter-and-lifetime.rs  type-parameter-default.rs  type-parameter.rs
