[package]
name = "variant_partial_eq"
version = "0.0.0"
authors = ["Patrick Roy <patrick.roy@tu-dortmund.de>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0"

[dev-dependencies]
trybuild = "1.0"